# python_coding

./: .gitignore  heap_sort_testing.py  images.py  live.py  req.txt
2021-plugin-architecture-main/after/: sandbox.py
ConsoleDraw/: draw_engine.py  live.py  main.py  point.py  scene.py
JuliaSet/: julia_set.py  julia_set_animation.py
MandelbrotBulb/: example3d.py
MandelbrotSet/: mandelbrot_set.py
PySide/: pyproject.toml
ScienceProgrammingBookExercises/: ex_2.3.8.py  ex_2.4.4.py  ex_2.5.4.py  ex_32.4.4.py  ex_32.7.2.py  prime_number.py
ScienceProgrammingBookExercises/ex_32.6.3/: data.txt  ex_32.6.3.py
client_server/: client.py  server.py
cpp_example/: cpp_example.py
simple_neuro_network/: main.py  pyproject.toml  requirement.txt  utils.py
snake_game/: game_engine.py  point.py  run.py  score.py  screen_config.py
temperature_diagram/: data_provider.py  draw_engine.py  live.py  main.py  pyproject.toml  screen_config.py  styles.py
tetris/: run.py  screen_config.py
